log
Thu Apr 21 17:55:19 UTC 2022: 
 treemap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:35: error: ‘key1’ undeclared (first use in this function); did you mean ‘key_t’?
   int resultado = map->lower_than(key1,key2);
                                   ^~~~
                                   key_t
treemap.c:45:35: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:45:40: error: ‘key2’ undeclared (first use in this function); did you mean ‘key1’?
   int resultado = map->lower_than(key1,key2);
                                        ^~~~
                                        key1
Compilation failed
7c4b98d
Thu Apr 21 18:01:19 UTC 2022: 
 treemap.c | 18 +-----------------
 1 file changed, 1 insertion(+), 17 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:21: error: ‘lt’ undeclared (first use in this function)
   map->lower_than = lt;
                     ^~
treemap.c:41:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
60e7777
Thu Apr 21 18:01:34 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   map->lower_than = lt;
                   ^
treemap.c:42:19: error: ‘lt’ is used uninitialized in this function [-Werror=uninitialized]
   map->lower_than = lt;
   ~~~~~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
32dbc05
Thu Apr 21 18:01:58 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:22: error: invalid type argument of unary ‘*’ (have ‘int’)
   map->lower_than = (*lt);
                      ^~~
Compilation failed
7c2f5d8
Thu Apr 21 18:02:16 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   map->lower_than = (lt);
                   ^
treemap.c:42:19: error: ‘lt’ is used uninitialized in this function [-Werror=uninitialized]
   map->lower_than = (lt);
   ~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
44a9f22
Thu Apr 21 18:03:09 UTC 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
3262d1a
Thu Apr 21 20:02:30 UTC 2022: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:13: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
      return nodeKey;
             ^~~~~~~
treemap.c:88:18: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return nodeKey;
                  ^~~~~~~
treemap.c:95:18: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return nodeKey;
                  ^~~~~~~
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8cf2462
Thu Apr 21 20:03:36 UTC 2022: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
5303a30
Thu Apr 21 20:13:07 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:12: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
        if (nodeKey = NULL)  break;
            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
72dcdfd
Thu Apr 21 20:14:17 UTC 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  8|7
total_score: 5/70
897afdf
Thu Apr 21 20:14:52 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 5/70
0ebaa6e
Thu Apr 21 20:18:06 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
1d55721
Thu Apr 21 20:25:26 UTC 2022: 
 treemap.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:10: error: too few arguments to function ‘is_equal’
     if ((is_equal(key,nodeKey->pair->key)) == 1){
          ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
Compilation failed
7fff42d
Thu Apr 21 20:25:38 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c079962
Thu Apr 21 20:26:12 UTC 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e902b11
Sun Apr 24 15:48:37 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
b7dc14d
Sun Apr 24 16:37:56 UTC 2022: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  8|7
total_score: 5/70
4882a39
Sun Apr 24 16:46:23 UTC 2022: 
 treemap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
a7169e3
Sun Apr 24 16:47:40 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
a23afa6
Sun Apr 24 16:53:51 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
d98a6b9
Sun Apr 24 16:55:49 UTC 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
730e103
Sun Apr 24 16:59:30 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
23a09ca
Sun Apr 24 17:13:03 UTC 2022: 
 treemap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  8|7
total_score: 5/70
e0a4e81
Sun Apr 24 17:14:03 UTC 2022: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
d22c41e
Sun Apr 24 17:14:41 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
cf5b8f1
